--- a/MoneyTimer/MainPage.xaml
+++ b/MoneyTimer/MainPage.xaml
@@ -25,7 +25,7 @@
             <Button Name="StartStopBtn" Margin="2,0,0,0" Content="Start" Height="30" Grid.Column="2" VerticalAlignment="Center" Click="StartStopBtn_Click"/>
             <Button Name="ResetBtn" Margin="2,0,2,0" Content="Reset" Height="30" Grid.Column="3" VerticalAlignment="Center" Click="ResetBtn_Click"/>
         </Grid>
-        <TextBlock Name="MoneyTxt" Text="0€" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72" />
-        <TextBlock Text="0:00:00" Grid.Row="2" HorizontalAlignment="Right"/>
+        <TextBlock Name="MoneyTxt" Text="0 €" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="72" />
+        <TextBlock Name="TimeText" Text="0:00:00" Grid.Row="2" HorizontalAlignment="Right"/>
     </Grid>
 </Page>
